[500201] allow loading managed engines into the query results
	added reusable content and label provider for query engines
	added engine detail tree in query results

Change-Id: I6117d147c5c66e558e2e6dd2102fcce9211cd21f
Signed-off-by: Abel Hegedus <abel.hegedus@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.tooling.ui.browser/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui.browser/plugin.xml
@@ -184,6 +184,10 @@
             </reference>
          </activeWhen>
       </handler>
+      <handler
+            class="org.eclipse.viatra.query.tooling.ui.browser.QueryLanguageExecutableExtensionFactory:org.eclipse.viatra.query.tooling.ui.queryresult.handlers.OpenManagedEngineHandler"
+            commandId="org.eclipse.viatra.query.tooling.ui.result.openmanaged">
+      </handler>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -264,6 +268,12 @@
                label="Remove loaded queries"
                style="push">
          </command>
+         <command
+               commandId="org.eclipse.viatra.query.tooling.ui.result.openmanaged"
+               icon="platform:/plugin/org.eclipse.viatra.query.tooling.ui/icons/rsz_viatra_logo.png"
+               label="Open managed engine"
+               style="push">
+         </command>
       </menuContribution>
       <menuContribution
             allPopups="false"
@@ -312,6 +322,11 @@
             categoryId="org.eclipse.viatra.query.tooling.category"
             id="org.eclipse.viatra.query.tooling.ui.result.loadmodel"
             name="Load model from active editor">
+      </command>
+      <command
+            categoryId="org.eclipse.viatra.query.tooling.category"
+            id="org.eclipse.viatra.query.tooling.ui.result.openmanaged"
+            name="Open managed engine">
       </command>
       <command
             categoryId="org.eclipse.viatra.query.tooling.category"
