--- a/transformation/plugins/org.eclipse.viatra.transformation.debug.transformationtrace/build.properties
+++ b/transformation/plugins/org.eclipse.viatra.transformation.debug.transformationtrace/build.properties
@@ -1,9 +1,6 @@
 bin.includes = .,\
-               model/,\
                META-INF/,\
-               plugin.xml,\
                plugin.properties
-source.. = src-gen/,\
-           src/,\
+source.. = src/,\
            xtend-gen/
 output.. = bin/
