[499995] Updated proposed view structure for transformation perspective
Change-Id: Id5ef2423abca077eb0b1f2265c56086a6fe22daa
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/addon/plugins/org.eclipse.viatra.addon.querybyexample.ui/plugin.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.querybyexample.ui/plugin.xml
@@ -203,7 +203,7 @@
              id="org.eclipse.viatra.addon.querybyexample.ui.qbeview"
              minimized="false"
              relationship="stack"
-             relative="org.eclipse.ui.views.ContentOutline"
+             relative="right"
              visible="false">
        </view>
        <viewShortcut
