--- a/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/plugin.xml
@@ -39,7 +39,7 @@
   </extension>
   <extension point="org.eclipse.ui.perspectiveExtensions">
     <perspectiveExtension targetID="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective">
-      <view id="org.eclipse.viatra.query.tooling.ui.retevis.views.ReteVisualizer" minimized="false" relationship="stack" relative="org.eclipse.ui.views.PropertySheet" visible="false"/>
+      <view id="org.eclipse.viatra.query.tooling.ui.retevis.views.ReteVisualizer" minimized="false" relationship="stack" relative="bottomLeft" visible="false"/>
       <viewShortcut id="org.eclipse.viatra.query.tooling.ui.retevis.views.ReteVisualizer"/>
     </perspectiveExtension>
   </extension>
