[500845] Added wizard extensions for common navigators
Change-Id: I6f4a4b3121715b39cae9ebcabd2ce159d866dae9
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.tooling.ui/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui/plugin.xml
@@ -733,4 +733,31 @@
             name="Transformation Development">
       </perspective>
    </extension>
+   <extension
+         point="org.eclipse.ui.navigator.navigatorContent">
+      <commonWizard
+            menuGroupId="org.eclipse.viatra"
+            type="new"
+            wizardId="org.eclipse.viatra.query.tooling.ui.newproject">
+         <enablement>
+            <with
+                  variable="activeWorkbenchWindow.activePerspective">
+               <equals
+                     value="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective">
+               </equals>
+            </with></enablement>
+      </commonWizard>
+      <commonWizard
+            menuGroupId="org.eclipse.viatra"
+            type="new"
+            wizardId="org.eclipse.viatra.query.tooling.ui.newvqlfile">
+         <enablement>
+            <with
+                  variable="activeWorkbenchWindow.activePerspective">
+               <equals
+                     value="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective">
+               </equals>
+            </with></enablement>
+      </commonWizard>
+   </extension>
 </plugin>
