--- a/transformation/plugins/org.eclipse.viatra.transformation.ui/plugin.xml
+++ b/transformation/plugins/org.eclipse.viatra.transformation.ui/plugin.xml
@@ -31,5 +31,20 @@
          </newWizardShortcut>
       </perspectiveExtension>
    </extension>
-
+   <extension
+         point="org.eclipse.ui.navigator.navigatorContent">
+      <commonWizard
+            menuGroupId="org.eclipse.viatra"
+            type="new"
+            wizardId="org.eclipse.viatra.transformation.ui.wizards.transformation">
+         <enablement>
+            <with
+                  variable="activeWorkbenchWindow.activePerspective">
+               <equals
+                     value="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective">
+               </equals>
+            </with>
+         </enablement>
+      </commonWizard>
+   </extension>
 </plugin>
