--- a/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/plugin.xml
@@ -2,6 +2,17 @@
   <extension point="org.eclipse.ui.views">
     <view category="org.eclipse.viatra.query.tooling.ui" class="org.eclipse.viatra.query.tooling.ui.retevis.views.ReteVisualizationView" icon="platform:/plugin/org.eclipse.viatra.query.tooling.ui/icons/logo2.png" id="org.eclipse.viatra.query.tooling.ui.retevis.views.ReteVisualizer" name="Rete Visualizer"/>
   </extension>
+  <extension point="org.eclipse.ui.preferencePages">
+    <page category="org.eclipse.viatra.query.tooling.ui.viatra" class="org.eclipse.viatra.query.tooling.ui.retevis.preference.ReteVisualizationPreferencePage" id="org.eclipse.viatra.query.tooling.ui.retevis" name="Rete Visualization">
+      <keywordReference id="org.eclipse.viatra.query.patternlanguage.emf.ui.keyword_EMFPatternLanguage"/>
+    </page>
+  </extension>
+  <extension point="org.eclipse.ui.perspectiveExtensions">
+    <perspectiveExtension targetID="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective">
+      <view id="org.eclipse.viatra.query.tooling.ui.retevis.views.ReteVisualizer" minimized="false" relationship="stack" relative="bottomLeft" visible="false"/>
+      <viewShortcut id="org.eclipse.viatra.query.tooling.ui.retevis.views.ReteVisualizer"/>
+    </perspectiveExtension>
+  </extension>
   <extension id="org.eclipse.viatra.query.tooling.ui.retevis.ReteVisualization" point="org.eclipse.viatra.query.runtime.queryspecification">
     <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.tooling.ui.retevis.ReteVisualization" id="org.eclipse.viatra.query.tooling.ui.retevis.ReteVisualization">
       <query-specification fqn="org.eclipse.viatra.query.tooling.ui.retevis.inputRecipe"/>
@@ -20,6 +31,8 @@
       <query-specification fqn="org.eclipse.viatra.query.tooling.ui.retevis.inputFilterMask"/>
       <query-specification fqn="org.eclipse.viatra.query.tooling.ui.retevis.equalityFilterRecipe"/>
       <query-specification fqn="org.eclipse.viatra.query.tooling.ui.retevis.transparentRecipe"/>
+      <query-specification fqn="org.eclipse.viatra.query.tooling.ui.retevis.discriminatorDispatcherRecipe"/>
+      <query-specification fqn="org.eclipse.viatra.query.tooling.ui.retevis.discriminatorBucketRecipe"/>
       <query-specification fqn="org.eclipse.viatra.query.tooling.ui.retevis.transitiveClosureRecipe"/>
       <query-specification fqn="org.eclipse.viatra.query.tooling.ui.retevis.trimmerRecipe"/>
       <query-specification fqn="org.eclipse.viatra.query.tooling.ui.retevis.aggregatorRecipe"/>
@@ -31,16 +44,5 @@
       <query-specification fqn="org.eclipse.viatra.query.tooling.ui.retevis.multiParentNodeRecipeParents"/>
       <query-specification fqn="org.eclipse.viatra.query.tooling.ui.retevis.singleParentNodeRecipeParent"/>
     </group>
-  </extension>
-  <extension point="org.eclipse.ui.preferencePages">
-    <page category="org.eclipse.viatra.query.tooling.ui.viatra" class="org.eclipse.viatra.query.tooling.ui.retevis.preference.ReteVisualizationPreferencePage" id="org.eclipse.viatra.query.tooling.ui.retevis" name="Rete Visualization">
-      <keywordReference id="org.eclipse.viatra.query.patternlanguage.emf.ui.keyword_EMFPatternLanguage"/>
-    </page>
-  </extension>
-  <extension point="org.eclipse.ui.perspectiveExtensions">
-    <perspectiveExtension targetID="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective">
-      <view id="org.eclipse.viatra.query.tooling.ui.retevis.views.ReteVisualizer" minimized="false" relationship="stack" relative="bottomLeft" visible="false"/>
-      <viewShortcut id="org.eclipse.viatra.query.tooling.ui.retevis.views.ReteVisualizer"/>
-    </perspectiveExtension>
   </extension>
 </plugin>
