--- a/releng/org.eclipse.viatra.parent.core/pom.xml
+++ b/releng/org.eclipse.viatra.parent.core/pom.xml
@@ -80,6 +80,18 @@
                      <properties>viatra.main.version</properties>
                    </configuration>
                </plugin>
+				<plugin>
+	               <groupId>org.apache.maven.plugins</groupId>
+	               <artifactId>maven-jar-plugin</artifactId>
+	               <version>2.4</version>
+	               <configuration>
+                        <archive>
+                            <manifestEntries>
+                                <SCM-Revision>${buildNumber}</SCM-Revision>
+                            </manifestEntries>
+                        </archive>
+                    </configuration>
+				</plugin>
             </plugins>
         </pluginManagement>
     </build>
