[503318] Separate pom.xml for releasing DSE to the maven repo
Change-Id: I941094760d371faf77208f16cbb0350fa63a492c

--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -38,9 +38,7 @@
 		<module>../../cep/features/org.eclipse.viatra.cep.feature</module>
 
 		<!-- DSE -->
-		<module>../../dse/plugins/org.eclipse.viatra.dse</module>
-		<module>../../dse/plugins/org.eclipse.viatra.dse.genetic</module>
-		<module>../../dse/features/org.eclipse.viatra.dse.feature</module>
+		<module>../org.eclipse.viatra.parent.dse</module>
 
 		<!-- Addons -->
 		<module>../../addon/plugins/org.eclipse.viatra.addon.querybyexample</module>
