--- a/transformation/plugins/org.eclipse.viatra.transformation.debug.ui/plugin.xml
+++ b/transformation/plugins/org.eclipse.viatra.transformation.debug.ui/plugin.xml
@@ -238,4 +238,14 @@
             </viewShortcut>
          </perspectiveExtension>
       </extension>
+      <extension
+            point="org.eclipse.core.runtime.adapters">
+         <factory
+               adaptableType="org.eclipse.viatra.transformation.debug.model.transformationstate.TransformationModelElement"
+               class="org.eclipse.viatra.transformation.debug.ui.views.modelinstancebrowser.properties.PropertySourceAdapterFactory">
+            <adapter
+                  type="org.eclipse.ui.views.properties.IPropertySource">
+            </adapter>
+         </factory>
+      </extension>
 </plugin>
