--- a/releng/org.eclipse.viatra.parent.dse/pom.xml
+++ b/releng/org.eclipse.viatra.parent.dse/pom.xml
@@ -19,13 +19,31 @@
 	</modules>
 	<parent>
 		<groupId>org.eclipse.viatra</groupId>
-		<artifactId>org.eclipse.viatra.parent.all</artifactId>
+		<artifactId>org.eclipse.viatra.parent</artifactId>
 		<version>1.5.0-SNAPSHOT</version>
-		<relativePath>../org.eclipse.viatra.parent.all/pom.xml</relativePath>
+		<relativePath>../org.eclipse.viatra.parent/pom.xml</relativePath>
 	</parent>
 	<properties>
 		<viatra.incubation.version>0.15.0-SNAPSHOT</viatra.incubation.version>
+		<core.repository.url>file://${basedir}/../../../releng/org.eclipse.viatra.update.core/target/repository</core.repository.url>
 	</properties>
+	<repositories>
+		<repository>
+			<id>viatra.core</id>
+			<url>${core.repository.url}</url>
+			<layout>p2</layout>
+		</repository>
+		<repository>
+			<id>viatra.nexus</id>
+			<url>https://repo.eclipse.org/content/groups/viatra/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -35,31 +53,6 @@
 					<version>${tycho.version}</version>
 					<configuration>
 						<properties>viatra.incubation.version</properties>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.tycho</groupId>
-					<artifactId>target-platform-configuration</artifactId>
-					<version>${tycho.version}</version>
-					<configuration>
-						<resolver>p2</resolver>
-						<target>
-							<artifact>
-								<groupId>org.eclipse.viatra</groupId>
-								<artifactId>org.eclipse.viatra.target.core</artifactId>
-								<version>${viatra.main.version}</version>
-							</artifact>
-							<dependency-resolution>
-								<extraRequirements>
-									<requirement>
-										<type>eclipse-plugin</type>
-										<id>com.google.inject.multibindings</id>
-										<versionRange>[3.0.0,4.0.0)</versionRange>
-									</requirement>
-								</extraRequirements>
-							</dependency-resolution>
-						</target>
-						<ignoreTychoRepositories>true</ignoreTychoRepositories>
 					</configuration>
 				</plugin>
 			</plugins>
