[503318] Fixing DSE build
Change-Id: I5113784cfbb4c79256e36eac07376bd732751fc8
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.dse/pom.xml
+++ b/releng/org.eclipse.viatra.parent.dse/pom.xml
@@ -45,6 +45,33 @@
 		</repository>
 	</repositories>
 	<build>
+	   <plugins>
+	   <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>target-platform-configuration</artifactId>
+                <version>${tycho.version}</version>
+                <configuration>
+                    <resolver>p2</resolver>
+                    <target>
+                        <artifact>
+                            <groupId>org.eclipse.viatra</groupId>
+                            <artifactId>org.eclipse.viatra.target.core</artifactId>
+                            <version>${viatra.main.version}</version>
+                        </artifact>
+                        <dependency-resolution>
+                        <extraRequirements>
+                            <requirement>
+                                <type>eclipse-plugin</type>
+                                <id>com.google.inject.multibindings</id>
+                                <versionRange>[3.0.0,4.0.0)</versionRange>
+                            </requirement>
+                        </extraRequirements>
+                    </dependency-resolution>
+                    </target>
+                    <ignoreTychoRepositories>true</ignoreTychoRepositories>
+                </configuration>
+            </plugin>
+	   </plugins>
 		<pluginManagement>
 			<plugins>
 				<plugin>
